--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   },
   "devDependencies": {
     "vite": "^4.4.9"
+  }, 
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "ts-node-dev --respawn src/Union.ts",
+    "serve": "ts-node-dev src/function.ts",
+    "build": "tsc"
   }
 }
